--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "node_modules/.bin/mocha test/**",
     "build-examples": "npm run build-browser && npm run build-browser-e2e",
     "build-browser": "./node_modules/.bin/browserify examples/webrtc-browser/index.js > examples/webrtc-browser/index.browser.js",
-    "build-browser-e2e": "./node_modules/.bin/browserify examples/webrtc-browser-e2e/index.js > examples/webrtc-browser-e2e/index.browser.js"
+    "build-browser-e2e": "./node_modules/.bin/browserify examples/webrtc-browser-e2e/index.js > examples/webrtc-browser-e2e/index.browser.js",
+    "build-browser-interactive": "./node_modules/.bin/browserify examples/webrtc-browser-interactive/index.js > examples/webrtc-browser-interactive/index.browser.js"
   },
   "keywords": [
     "kad",
