--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
   },
   "dependencies": {
     "hat": "0.0.3",
-    "kad": "^1.5.5",
-    "simple-peer": "^6.2.0"
+    "kad": "^2.4.1",
+    "simple-peer": "^8.2.0"
   },
   "devDependencies": {
-    "chai": "^3.4.1",
+    "browserify": "^11.1.0",
+    "bunyan": "^1.8.12",
+    "chai": "^3.5.0",
+    "levelup": "^1.3.5",
+    "memdown": "^1.4.1",
     "mocha": "^2.3.4",
     "sinon": "^1.17.2",
-    "browserify": "^11.1.0",
+    "wrtc": "0.0.63",
     "ws": "^0.8.1"
   }
 }
