--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kad-webrtc",
-  "version": "1.5.0",
+  "version": "2.0.0-beta",
   "description": "webrtc transport for kad",
   "main": "index.js",
   "directories": {
